--- a/src/global.css
+++ b/src/global.css
@@ -1,8 +1,11 @@
+/* ------------ Typefaces ------------ */
+
 @font-face {
   font-family: "JetBrainsMonoNF";
   src: url("../fonts/JetBrainsMonoNF-300.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +13,7 @@
   src: url("../fonts/JetBrainsMonoNF-400.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +21,7 @@
   src: url("../fonts/JetBrainsMonoNF-500.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,36 +29,242 @@
   src: url("../fonts/JetBrainsMonoNF-600.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
-/* Global Styles */
+/* ------------ Global Styles ------------ */
 
+:root {
+  /* Typefaces */
+  --jbMono-nf: "JetBrainsMonoNF", monospace;
+
+  /* Available Font Weights */
+  --font-light: 300;
+  --font-regular: 400;
+  --font-medium: 500;
+  --font-semiBold: 600;
+
+  /* Colors (Default to DarkTheme) */
+  --c-bg: #f8f9fa;
+  --c-secBg: #e9ecef;
+  --c-onBg: rgba(233, 236, 239, 0.24);
+  --c-primary: #212529;
+  --c-secondary: #495057;
+  --c-tertiary: #6c757d;
+  --c-accent: #42a0fd;
+
+  /* Typography */
+  --base-font-size: 1rem;
+  --base-line-height-multiplier: 1.3;
+
+  /* Font Sizes */
+  --font-size16: calc(16 / 16 * 1rem);
+  --font-size20: calc(20 / 16 * 1rem);
+
+  /* Line Heights */
+  --line-height16: calc(16 / 16 * var(--base-line-height-multiplier) * 1rem);
+  --line-height20: calc(20 / 16 * var(--base-line-height-multiplier) * 1rem);
+
+  /* Spacing */
+  --base-space: 0.5rem;
+
+  /* Radius */
+  --base-radius: 0.5rem;
+
+  /* Icons */
+  --icon-settings: "&#xeb51";
+}
+
+/* Applied to every element */
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-/* Reusable Components */
+/* ------------ Text Styles ------------ */
 
+.body1 {
+  font-size: var(--font-size20);
+  font-weight: var(--font-regular);
+  line-height: var(--line-height20);
+}
+
+.body2 {
+  font-size: var(--font-size16);
+  font-weight: var(--font-light);
+  line-height: var(--line-height16);
+}
+
+/* ------------ Spacers ------------ */
+
+/* Width */
+
+.space-w1 {
+  width: calc(0.5 * var(--base-space));
+}
+
+.space-w2 {
+  width: calc(1 * var(--base-space));
+}
+
+.space-w3 {
+  width: calc(1.5 * var(--base-space));
+}
+
+.space-w4 {
+  width: calc(2 * var(--base-space));
+}
+
+.space-w5 {
+  width: calc(2.5 * var(--base-space));
+}
+
+.space-w6 {
+  width: calc(3 * var(--base-space));
+}
+
+/* Hight */
+
+.space-h1 {
+  height: calc(0.5 * var(--base-space));
+}
+
+.space-h2 {
+  height: calc(1 * var(--base-space));
+}
+
+.space-h3 {
+  height: calc(1.5 * var(--base-space));
+}
+
+.space-h4 {
+  height: calc(2 * var(--base-space));
+}
+
+.space-h5 {
+  height: calc(2.5 * var(--base-space));
+}
+
+.space-h6 {
+  height: calc(3 * var(--base-space));
+}
+
+/* ------------ Radius ------------ */
+
+.radius1 {
+  border-radius: calc(0.5 * var(--base-radius));
+}
+
+.radius2 {
+  border-radius: calc(1 * var(--base-radius));
+}
+
+.radius3 {
+  border-radius: calc(2 * var(--base-radius));
+}
+
+.radius4 {
+  border-radius: calc(3 * var(--base-radius));
+}
+
+/* ------------ Reusable Components ------------ */
+
+/* Scaffold for every page */
 body {
   width: 100vw;
   height: 100vh;
 
-  font-family: "JetBrainsMonoNF", monospace;
-  font-weight: 400;
+  font-family: var(--jbMono-nf);
+  font-weight: var(--font-regular);
 
   position: relative;
 }
 
-/* Background Wallpaper Styles */
+/* Flex utilities */
 
-.bg .light-bg {
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--base-space);
+}
+
+.flex.itemCenter {
+  align-items: center;
+}
+
+.flex.contentCenter {
+  justify-content: center;
+}
+
+.flex.column {
+  flex-direction: column;
+}
+
+.flex.row {
+  flex-direction: row;
+}
+
+/* Inputs */
+
+input[type="text"] {
+  background-color: transparent;
+  border: 0px;
+
+  color: var(--c-primary);
+  font-size: var(--font-size16);
+  line-height: var(--line-height16);
+  font-weight: var(--font-regular);
+}
+
+input[type="text"]:focus {
+  outline: 0px;
+}
+
+input[type="text"]::placeholder {
+  color: var(--c-tertiary);
+
+  font-size: var(--font-size16);
+  line-height: var(--line-height16);
+  font-weight: var(--font-regular);
+}
+
+/* ------------ Scrollbar ------------ */
+
+/* The scrollbar's width */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* The background of the scrollbar track */
+::-webkit-scrollbar-track {
+  background: var(--c-onBg);
+  /* border-radius: 2px; */
+}
+
+/* The handle (thumb) of the scrollbar */
+::-webkit-scrollbar-thumb {
+  background: var(--c-secBg);
+  border-radius: 2px;
+}
+
+/* The thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--c-bg);
+}
+
+/* ------------ Background Wallpaper Styles ------------ */
+
+/* Wallpaper img shown in the bg */
+.bg .wallpaper {
   position: absolute;
   z-index: 0;
   width: 100%;
   height: 100%;
 }
 
+/* Blur shown on top of wallpaper */
 .bg .blur {
   position: absolute;
   z-index: 1;
@@ -61,6 +272,7 @@ body {
   height: 100%;
 }
 
+/* Scaffolding for content on every page */
 body main {
   position: absolute;
   z-index: 10;
