--- a/src/global.css
+++ b/src/global.css
@@ -58,10 +58,14 @@
   --base-line-height-multiplier: 1.3;
 
   /* Font Sizes */
+  --font-size12: calc(12 / 16 * 1rem);
+  --font-size14: calc(14 / 16 * 1rem);
   --font-size16: calc(16 / 16 * 1rem);
   --font-size20: calc(20 / 16 * 1rem);
 
   /* Line Heights */
+  --line-height12: calc(12 / 16 * var(--base-line-height-multiplier) * 1rem);
+  --line-height14: calc(14 / 16 * var(--base-line-height-multiplier) * 1rem);
   --line-height16: calc(16 / 16 * var(--base-line-height-multiplier) * 1rem);
   --line-height20: calc(20 / 16 * var(--base-line-height-multiplier) * 1rem);
 
@@ -70,9 +74,6 @@
 
   /* Radius */
   --base-radius: 0.5rem;
-
-  /* Icons */
-  --icon-settings: "&#xeb51";
 }
 
 /* Applied to every element */
@@ -85,15 +86,31 @@
 /* ------------ Text Styles ------------ */
 
 .body1 {
-  font-size: var(--font-size20);
+  font-family: var(--jbMono-nf);
+  font-size: var(--font-size16);
   font-weight: var(--font-regular);
-  line-height: var(--line-height20);
+  line-height: var(--line-height16);
 }
 
 .body2 {
+  font-family: var(--jbMono-nf);
   font-size: var(--font-size16);
   font-weight: var(--font-light);
   line-height: var(--line-height16);
+}
+
+.text1 {
+  font-family: var(--jbMono-nf);
+  font-size: var(--font-size14);
+  font-weight: var(--font-regular);
+  line-height: var(--line-height14);
+}
+
+.text2 {
+  font-family: var(--jbMono-nf);
+  font-size: var(--font-size12);
+  font-weight: var(--font-regular);
+  line-height: var(--line-height12);
 }
 
 /* ------------ Spacers ------------ */
@@ -186,15 +203,7 @@ body {
 .flex {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--base-space);
-}
-
-.flex.itemCenter {
-  align-items: center;
-}
-
-.flex.contentCenter {
-  justify-content: center;
+  /* gap: var(--base-space); */
 }
 
 .flex.column {
@@ -205,6 +214,14 @@ body {
   flex-direction: row;
 }
 
+.flex.xCenter {
+  align-items: center;
+}
+
+.flex.yCenter {
+  justify-content: center;
+}
+
 /* Inputs */
 
 input[type="text"] {
@@ -212,6 +229,8 @@ input[type="text"] {
   border: 0px;
 
   color: var(--c-primary);
+
+  font-family: var(--jbMono-nf);
   font-size: var(--font-size16);
   line-height: var(--line-height16);
   font-weight: var(--font-regular);
@@ -227,6 +246,18 @@ input[type="text"]::placeholder {
   font-size: var(--font-size16);
   line-height: var(--line-height16);
   font-weight: var(--font-regular);
+}
+
+/* Buttons */
+
+button {
+  border: 0px;
+  background-color: transparent;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: var(--c-secBg);
 }
 
 /* ------------ Scrollbar ------------ */
@@ -262,6 +293,7 @@ input[type="text"]::placeholder {
   z-index: 0;
   width: 100%;
   height: 100%;
+  isolation: isolate;
 }
 
 /* Blur shown on top of wallpaper */
@@ -270,17 +302,18 @@ input[type="text"]::placeholder {
   z-index: 1;
   width: 100%;
   height: 100%;
+  isolation: isolate;
 }
 
 /* Scaffolding for content on every page */
 body main {
   position: absolute;
   z-index: 10;
+
   width: 100%;
   height: 100%;
 
   display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
+  flex-flow: row nowrap;
   justify-content: center;
 }
